--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,8 @@
+*.swift linguist-language=objective-c
 # Auto detect text files and perform LF normalization
 * text=auto
 
 # Custom for Visual Studio
-
 *.cs     diff=csharp
 
 # Standard to msysgit
