--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.swift linguist-language=objective-c
+*.html linguist-language=objective-c
 # Auto detect text files and perform LF normalization
 * text=auto
 
